fixed hero image text font size on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ body {
 .header-home {
     color: #fafafa;
     font-family: 'Open Sans', sans-serif;
-    font-size: 30px;
+    font-size: 32px;
     padding-top: 250px; 
     width: 50%;
  }
